Create problem pin action and api functions added; tools for another actions added
+ Create problem pin action added
+ Create problem pin api added
+ Map layout add icon and send icon added
+/- Routes and another main files moved to "main" folder

--- a/src/containers/PinView/style.css
+++ b/src/containers/PinView/style.css
@@ -5,8 +5,15 @@
 }
 
 .card{
-    padding: 50px;
-    height: 100%;
+    margin: 30px 40px 30px 40px;
+    padding-left: 20px;
+    padding-top: 20px;
+    height: 45vh;
+}
+
+.card-gallery{
+    margin: 30px;
+    height: 40vh;
 }
 
 .card-description{
