--- a/src/containers/MainMap/style.css
+++ b/src/containers/MainMap/style.css
@@ -17,3 +17,17 @@ body{
     height: 48px;
     padding: 0 30px;
 }
+
+.fab-list{
+    z-index: 1000;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    display: grid;
+    margin-bottom: 15px;
+    margin-right: 15px;
+}
+
+.fab{
+    margin-bottom: 15px !important;
+}
