--- a/src/containers/MainMap/style.css
+++ b/src/containers/MainMap/style.css
@@ -3,31 +3,22 @@ body{
 }
 
 .map{
-    height: 100vh;
-    width: 100%
+    height: 100%;
+    width: 100%;
 }
 
-
-.root{
-    background: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
-    border: 0;
-    borderRadius: 3;
-    boxShadow: 0 3px 5px 2px rgba(255, 105, 135, .3);
-    color: white;
-    height: 48px;
-    padding: 0 30px;
+.container{
+    position: relative;
+    height: 100%;
+    width: 100%;
 }
 
-.fab-list{
-    z-index: 1000;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    display: grid;
-    margin-bottom: 15px;
-    margin-right: 15px;
-}
 
 .fab{
-    margin-bottom: 15px !important;
+    z-index: 1000;
+    position: absolute !important;
+    left: 0;
+    bottom: 0;
+    margin-bottom: 30px !important;
+    margin-left: 5px !important;
 }
