--- a/src/containers/PinView/style.css
+++ b/src/containers/PinView/style.css
@@ -1,17 +1,22 @@
 .mainGrid{
-    width: 100%;
     height: 100%;
     background-color: #EDEEF0;
 }
 
-.grid-desc{
-    margin: 30px 40px 30px 40px;
-    padding-left: 20px;
-    padding-top: 20px;
+.grid-description{
+    padding-top: 50px;
+}
+
+.grid-image{
+    position: relative;
+    width: 100%;
 }
 
 .typ-headers{
     text-align: center;
+    font-style: normal;
+    font-weight: 400;
+    font-family: 'PT Sans', sans-serif;
 }
 
 .gallery{
@@ -22,4 +27,29 @@
 .description{
     font-size: 20pt;
     padding: 20px;
+}
+
+.carousel{
+    width: 80vw;
+    padding: 30px;
+}
+
+img{
+    object-fit: fill !important;
+}
+
+.aws-btn {
+    --slider-height-percentage: 60%;
+    --slider-transition-duration: 770ms;
+    --organic-arrow-thickness: 10px;
+    --organic-arrow-border-radius: 16px;
+    --organic-arrow-height: 40px;
+    --organic-arrow-color: #000000;
+    --control-button-width: 5%;
+    --control-button-height: 25%;
+    --control-button-background: transparent;
+    --control-bullet-color: #a3b9d0;
+    --control-bullet-active-color: #8b9db1;
+    --loader-bar-color: #851515;
+    --loader-bar-height: 6px;
 }
