--- a/src/containers/CreateDialogAccept/style.scss
+++ b/src/containers/CreateDialogAccept/style.scss
@@ -1,3 +1,5 @@
+$uploadError: #f44336;
+
 .text-input{
     width: 100%;
     margin: 15px 0 15px 0 !important;
@@ -9,6 +11,12 @@
 }
 
 .upload-error{
-    color: #f44336;
+    color: $uploadError;
     text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+    .dialog-title{
+        font-size: 1.0rem !important;
+    }
 }
